--- a/dev.html
+++ b/dev.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
-    <script crossorigin src="https://unpkg.com/depay-web3-blockchains@2/dist/umd/index.js"></script>
-    <script crossorigin src="https://unpkg.com/depay-web3-constants@2/dist/umd/index.js"></script>
-    <script src="dist/umd/index.dev.js"></script>
+    <script crossorigin src="https://unpkg.com/@depay/web3-blockchains@3/dist/umd/index.js"></script>
+    <script crossorigin src="https://unpkg.com/@depay/web3-constants@4/dist/umd/index.js"></script>
+    <script src="tmp/index.dev.js"></script>
   </head>
   <body>
     <div id="tokenOne" class="container d-flex justify-content-center pt-5"></div>
