--- a/dev.html
+++ b/dev.html
@@ -5,40 +5,173 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="https://depay.fi/favicon.png"/>
     <title>Development</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
-    <script crossorigin src="https://unpkg.com/@depay/web3-blockchains@4"></script>
-    <script crossorigin src="https://unpkg.com/@depay/web3-constants@5"></script>
+    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script crossorigin src="https://unpkg.com/@depay/web3-blockchains@4/dist/umd/index.js"></script>
+    <script crossorigin src="https://unpkg.com/@depay/web3-constants@5/dist/umd/index.js"></script>
     <script src="tmp/index.dev.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/bootstrap@5/dist/css/bootstrap.css">
+    <style>
+      .btn-primary {
+        color: #fff;
+        background-color: #ea357a !important;
+        border: 1px solid #ea357a !important;
+        padding: 0.35rem 1.2rem !important;
+        box-shadow: none;
+        outline: none;
+      }
+      .btn-primary:hover {
+        background-color: #db3071 !important;
+      }
+      .token-image img {
+        max-width: 80%;
+      }
+    </style>
   </head>
-  <body>
-    <div id="tokenOne" class="container d-flex justify-content-center pt-5"></div>
-    <div id="tokenTwo" class="container d-flex justify-content-center pt-5"></div>
-    <div style="background: red; width: 80px; height:  80px; border-radius: 999px;" id="tokenThree" class="container d-flex justify-content-center pt-5"></div>
-    <div id="tokenFour" class="container d-flex justify-content-center pt-5"></div>
-    <div id="tokenFive" class="container d-flex justify-content-center pt-5"></div>
-    <script>
-      ReactDOM.render(
-        React.createElement(window.ReactTokenImage.TokenImage, { blockchain: 'ethereum', address: '0xa0bEd124a09ac2Bd941b10349d8d224fe3c955eb' }),
-        document.getElementById('tokenOne')
-      )
-      ReactDOM.render(
-        React.createElement(window.ReactTokenImage.TokenImage, { blockchain: 'ethereum', address: '0xa0bed124a09ac2Bd941b10349d8d224fe3c955eb' }),
-        document.getElementById('tokenTwo')
-      )
-      ReactDOM.render(
-        React.createElement(window.ReactTokenImage.TokenImage, { blockchain: 'ethereum', address: '0xa0bed124a09ac2Bd941b0349d8d224fe3c955eb' }),
-        document.getElementById('tokenThree')
-      )
-      ReactDOM.render(
-        React.createElement(window.ReactTokenImage.TokenImage, { blockchain: 'ethereum', address: '0xEeeeeEeeeEeEeeEeEeEeeEEEeeeeEeeeeeeeEEeE' }),
-        document.getElementById('tokenFour')
-      )
-      ReactDOM.render(
-        React.createElement(window.ReactTokenImage.TokenImage, { blockchain: 'bsc', address: '0x0E09FaBB73Bd3Ade0a17ECC321fD13a19e81cE82' }),
-        document.getElementById('tokenFive')
-      )
-    </script>
+  <body style="background-color: #FAFAFA;">
+    <div class="container py-4">
+
+      <div class="py-2 pb-3 text-center">
+        <a href="https://depay.fi" target="_blank">
+          <img alt="DePay Logo" class="navbar-logo shadow-sm" src="https://depay.fi/logo.svg" style="height: 50px; width: 50px; border-radius: 999px;"/>
+        </a>
+      </div>
+
+      <div class="row px-2">
+       
+        <div class="d-block d-md-inline-block p-2 col-12 col-md-4">
+          <div class="px-0 py-4 rounded-lg bg-white border">
+            <div class="col px-0">
+              <div class="overflow-auto">
+                <h5 class="px-4">Token</h5>
+                <div class="px-4">
+                  <div id="tokenOne" class="container d-flex justify-content-center token-image pt-2"></div>
+                </div>
+              </div>
+              <div class="px-4 pt-3">
+                <script>
+                  ReactDOM.createRoot(
+                    document.getElementById('tokenOne')
+                  ).render(
+                    React.createElement(window.ReactTokenImage.TokenImage, { blockchain: 'ethereum', address: '0xa0bEd124a09ac2Bd941b10349d8d224fe3c955eb' }),
+                  )
+                </script>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="d-block d-md-inline-block p-2 col-12 col-md-4">
+          <div class="px-0 py-4 rounded-lg bg-white border">
+            <div class="col px-0">
+              <div class="overflow-auto">
+                <h5 class="px-4">Token</h5>
+                <div class="px-4">
+                  <div id="tokenTwo" class="container d-flex justify-content-center token-image pt-2"></div>
+                </div>
+              </div>
+              <div class="px-4 pt-3">
+                <script>
+                  ReactDOM.createRoot(
+                    document.getElementById('tokenTwo')
+                  ).render(
+                    React.createElement(window.ReactTokenImage.TokenImage, { blockchain: 'ethereum', address: '0xa0bed124a09ac2Bd941b10349d8d224fe3c955eb' })
+                  )
+                </script>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="d-block d-md-inline-block p-2 col-12 col-md-4">
+          <div class="px-0 py-4 rounded-lg bg-white border">
+            <div class="col px-0">
+              <div class="overflow-auto">
+                <h5 class="px-4">Token: Failed loading</h5>
+                <div class="px-4">
+                  <div id="tokenThree" class="container d-flex justify-content-center token-image pt-2"></div>
+                </div>
+              </div>
+              <div class="px-4 pt-3">
+                <script>
+                  ReactDOM.createRoot(
+                    document.getElementById('tokenThree')
+                  ).render(
+                    React.createElement(window.ReactTokenImage.TokenImage, { blockchain: 'ethereum', address: '0xa0bed124a09ac2Bd41b10349d8d224fe3c955eb' })
+                  )
+                </script>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="d-block d-md-inline-block p-2 col-12 col-md-4">
+          <div class="px-0 py-4 rounded-lg bg-white border">
+            <div class="col px-0">
+              <div class="overflow-auto">
+                <h5 class="px-4">Token: Native Ethereum</h5>
+                <div class="px-4">
+                  <div id="tokenFour" class="container d-flex justify-content-center token-image pt-2"></div>
+                </div>
+              </div>
+              <div class="px-4 pt-3">
+                <script>
+                  ReactDOM.createRoot(
+                    document.getElementById('tokenFour')
+                  ).render(
+                    React.createElement(window.ReactTokenImage.TokenImage, { blockchain: 'ethereum', address: '0xEeeeeEeeeEeEeeEeEeEeeEEEeeeeEeeeeeeeEEeE' })
+                  )
+                </script>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="d-block d-md-inline-block p-2 col-12 col-md-4">
+          <div class="px-0 py-4 rounded-lg bg-white border">
+            <div class="col px-0">
+              <div class="overflow-auto">
+                <h5 class="px-4">Token: Native BSC</h5>
+                <div class="px-4">
+                  <div id="tokenFive" class="container d-flex justify-content-center token-image pt-2"></div>
+                </div>
+              </div>
+              <div class="px-4 pt-3">
+                <script>
+                  ReactDOM.createRoot(
+                    document.getElementById('tokenFive')
+                  ).render(
+                    React.createElement(window.ReactTokenImage.TokenImage, { blockchain: 'bsc', address: '0xEeeeeEeeeEeEeeEeEeEeeEEEeeeeEeeeeeeeEEeE' })
+                  )
+                </script>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="d-block d-md-inline-block p-2 col-12 col-md-4">
+          <div class="px-0 py-4 rounded-lg bg-white border">
+            <div class="col px-0">
+              <div class="overflow-auto">
+                <h5 class="px-4">Token: Native Polygon</h5>
+                <div class="px-4">
+                  <div id="tokenSix" class="container d-flex justify-content-center token-image pt-2"></div>
+                </div>
+              </div>
+              <div class="px-4 pt-3">
+                <script>
+                  ReactDOM.createRoot(
+                    document.getElementById('tokenSix')
+                  ).render(
+                    React.createElement(window.ReactTokenImage.TokenImage, { blockchain: 'polygon', address: '0xEeeeeEeeeEeEeeEeEeEeeEEEeeeeEeeeeeeeEEeE' })
+                  )
+                </script>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
   </body>
 </html>
