--- a/dev.html
+++ b/dev.html
@@ -26,6 +26,11 @@
       .token-image img {
         max-width: 80%;
       }
+
+      .Token {
+        width:  200px;
+        height:  200px;
+      }
     </style>
   </head>
   <body style="background-color: #FAFAFA;">
@@ -43,17 +48,17 @@
           <div class="px-0 py-4 rounded-lg bg-white border">
             <div class="col px-0">
               <div class="overflow-auto">
-                <h5 class="px-4">Token</h5>
+                <h5 class="px-4 pb-4">Ethereum Token from Trustwallet</h5>
                 <div class="px-4">
-                  <div id="tokenOne" class="container d-flex justify-content-center token-image pt-2"></div>
+                  <div id="ethereumTokenFromTrustwallet" class="container d-flex justify-content-center token-image pt-2"></div>
                 </div>
               </div>
               <div class="px-4 pt-3">
                 <script>
                   ReactDOM.createRoot(
-                    document.getElementById('tokenOne')
+                    document.getElementById('ethereumTokenFromTrustwallet')
                   ).render(
-                    React.createElement(window.ReactTokenImage.TokenImage, { blockchain: 'ethereum', address: '0xa0bEd124a09ac2Bd941b10349d8d224fe3c955eb' }),
+                    React.createElement(window.ReactTokenImage.TokenImage, { className:"Token", blockchain: 'ethereum', address: '0xa0bEd124a09ac2Bd941b10349d8d224fe3c955eb' }),
                   )
                 </script>
               </div>
@@ -65,17 +70,17 @@
           <div class="px-0 py-4 rounded-lg bg-white border">
             <div class="col px-0">
               <div class="overflow-auto">
-                <h5 class="px-4">Token</h5>
+                <h5 class="px-4 pb-4">Ethereum Token from DePay API</h5>
                 <div class="px-4">
-                  <div id="tokenTwo" class="container d-flex justify-content-center token-image pt-2"></div>
+                  <div id="ethereumTokenFromDepayApi" class="container d-flex justify-content-center token-image pt-2"></div>
                 </div>
               </div>
               <div class="px-4 pt-3">
                 <script>
                   ReactDOM.createRoot(
-                    document.getElementById('tokenTwo')
+                    document.getElementById('ethereumTokenFromDepayApi')
                   ).render(
-                    React.createElement(window.ReactTokenImage.TokenImage, { blockchain: 'ethereum', address: '0xa0bed124a09ac2Bd941b10349d8d224fe3c955eb' })
+                    React.createElement(window.ReactTokenImage.TokenImage, { className:"Token", blockchain: 'ethereum', address: '0xa0bed124a09ac2Bd941b10349d8d224fe3c955eb' })
                   )
                 </script>
               </div>
@@ -87,7 +92,139 @@
           <div class="px-0 py-4 rounded-lg bg-white border">
             <div class="col px-0">
               <div class="overflow-auto">
-                <h5 class="px-4">Token: Failed loading</h5>
+                <h5 class="px-4 pb-4">BSC Token from Trustwallet</h5>
+                <div class="px-4">
+                  <div id="bscTokenFromTrustwallet" class="container d-flex justify-content-center token-image pt-2"></div>
+                </div>
+              </div>
+              <div class="px-4 pt-3">
+                <script>
+                  ReactDOM.createRoot(
+                    document.getElementById('bscTokenFromTrustwallet')
+                  ).render(
+                    React.createElement(window.ReactTokenImage.TokenImage, { className:"Token", blockchain: 'bsc', address: '0x0E09FaBB73Bd3Ade0a17ECC321fD13a19e81cE82' }),
+                  )
+                </script>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="d-block d-md-inline-block p-2 col-12 col-md-4">
+          <div class="px-0 py-4 rounded-lg bg-white border">
+            <div class="col px-0">
+              <div class="overflow-auto">
+                <h5 class="px-4 pb-4">BSC Token from DePay API</h5>
+                <div class="px-4">
+                  <div id="bscTokenFromDepayApi" class="container d-flex justify-content-center token-image pt-2"></div>
+                </div>
+              </div>
+              <div class="px-4 pt-3">
+                <script>
+                  ReactDOM.createRoot(
+                    document.getElementById('bscTokenFromDepayApi')
+                  ).render(
+                    React.createElement(window.ReactTokenImage.TokenImage, { className:"Token", blockchain: 'bsc', address: '0xa0bed124a09ac2Bd941b10349d8d224fe3c955eb' })
+                  )
+                </script>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="d-block d-md-inline-block p-2 col-12 col-md-4">
+          <div class="px-0 py-4 rounded-lg bg-white border">
+            <div class="col px-0">
+              <div class="overflow-auto">
+                <h5 class="px-4 pb-4">Polygon Token from Trustwallet</h5>
+                <div class="px-4">
+                  <div id="polygonTokenFromTrustwallet" class="container d-flex justify-content-center token-image pt-2"></div>
+                </div>
+              </div>
+              <div class="px-4 pt-3">
+                <script>
+                  ReactDOM.createRoot(
+                    document.getElementById('polygonTokenFromTrustwallet')
+                  ).render(
+                    React.createElement(window.ReactTokenImage.TokenImage, { className:"Token", blockchain: 'polygon', address: '0x831753DD7087CaC61aB5644b308642cc1c33Dc13' }),
+                  )
+                </script>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="d-block d-md-inline-block p-2 col-12 col-md-4">
+          <div class="px-0 py-4 rounded-lg bg-white border">
+            <div class="col px-0">
+              <div class="overflow-auto">
+                <h5 class="px-4 pb-4">Polygon Token from DePay API</h5>
+                <div class="px-4">
+                  <div id="polygonTokenFromDepayApi" class="container d-flex justify-content-center token-image pt-2"></div>
+                </div>
+              </div>
+              <div class="px-4 pt-3">
+                <script>
+                  ReactDOM.createRoot(
+                    document.getElementById('polygonTokenFromDepayApi')
+                  ).render(
+                    React.createElement(window.ReactTokenImage.TokenImage, { className:"Token", blockchain: 'polygon', address: '0x831753dd7087cac61ab5644b308642cc1c33dc13' })
+                  )
+                </script>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="d-block d-md-inline-block p-2 col-12 col-md-4">
+          <div class="px-0 py-4 rounded-lg bg-white border">
+            <div class="col px-0">
+              <div class="overflow-auto">
+                <h5 class="px-4 pb-4">Solana Token from Trustwallet</h5>
+                <div class="px-4">
+                  <div id="solanaTokenFromTrustwallet" class="container d-flex justify-content-center token-image pt-2"></div>
+                </div>
+              </div>
+              <div class="px-4 pt-3">
+                <script>
+                  ReactDOM.createRoot(
+                    document.getElementById('solanaTokenFromTrustwallet')
+                  ).render(
+                    React.createElement(window.ReactTokenImage.TokenImage, { className:"Token", blockchain: 'solana', address: 'EPjFWdd5AufqSSqeM2qN1xzybapC8G4wEGGkZwyTDt1v' }),
+                  )
+                </script>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="d-block d-md-inline-block p-2 col-12 col-md-4">
+          <div class="px-0 py-4 rounded-lg bg-white border">
+            <div class="col px-0">
+              <div class="overflow-auto">
+                <h5 class="px-4 pb-4">Solana Token from DePay API</h5>
+                <div class="px-4">
+                  <div id="solanaTokenFromDepayApi" class="container d-flex justify-content-center token-image pt-2"></div>
+                </div>
+              </div>
+              <div class="px-4 pt-3">
+                <script>
+                  ReactDOM.createRoot(
+                    document.getElementById('solanaTokenFromDepayApi')
+                  ).render(
+                    React.createElement(window.ReactTokenImage.TokenImage, { className:"Token", blockchain: 'solana', address: 'epjfwdd5aufqssqem2qn1xzybapc8g4weggkzwytdt1v' })
+                  )
+                </script>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="d-block d-md-inline-block p-2 col-12 col-md-4">
+          <div class="px-0 py-4 rounded-lg bg-white border">
+            <div class="col px-0">
+              <div class="overflow-auto">
+                <h5 class="px-4 pb-4">Token: Failed loading</h5>
                 <div class="px-4">
                   <div id="tokenThree" class="container d-flex justify-content-center token-image pt-2"></div>
                 </div>
@@ -97,7 +234,7 @@
                   ReactDOM.createRoot(
                     document.getElementById('tokenThree')
                   ).render(
-                    React.createElement(window.ReactTokenImage.TokenImage, { blockchain: 'ethereum', address: '0xa0bed124a09ac2Bd41b10349d8d224fe3c955eb' })
+                    React.createElement(window.ReactTokenImage.TokenImage, { className:"Token", blockchain: 'ethereum', address: '0xa0bed124a09ac2Bd41b10349d8d224fe3c955eb' })
                   )
                 </script>
               </div>
@@ -109,7 +246,7 @@
           <div class="px-0 py-4 rounded-lg bg-white border">
             <div class="col px-0">
               <div class="overflow-auto">
-                <h5 class="px-4">Token: Native Ethereum</h5>
+                <h5 class="px-4 pb-4">Token: Native Ethereum</h5>
                 <div class="px-4">
                   <div id="tokenFour" class="container d-flex justify-content-center token-image pt-2"></div>
                 </div>
@@ -119,7 +256,7 @@
                   ReactDOM.createRoot(
                     document.getElementById('tokenFour')
                   ).render(
-                    React.createElement(window.ReactTokenImage.TokenImage, { blockchain: 'ethereum', address: '0xEeeeeEeeeEeEeeEeEeEeeEEEeeeeEeeeeeeeEEeE' })
+                    React.createElement(window.ReactTokenImage.TokenImage, { className:"Token", blockchain: 'ethereum', address: '0xEeeeeEeeeEeEeeEeEeEeeEEEeeeeEeeeeeeeEEeE' })
                   )
                 </script>
               </div>
@@ -131,7 +268,7 @@
           <div class="px-0 py-4 rounded-lg bg-white border">
             <div class="col px-0">
               <div class="overflow-auto">
-                <h5 class="px-4">Token: Native BSC</h5>
+                <h5 class="px-4 pb-4">Token: Native BSC</h5>
                 <div class="px-4">
                   <div id="tokenFive" class="container d-flex justify-content-center token-image pt-2"></div>
                 </div>
@@ -141,7 +278,7 @@
                   ReactDOM.createRoot(
                     document.getElementById('tokenFive')
                   ).render(
-                    React.createElement(window.ReactTokenImage.TokenImage, { blockchain: 'bsc', address: '0xEeeeeEeeeEeEeeEeEeEeeEEEeeeeEeeeeeeeEEeE' })
+                    React.createElement(window.ReactTokenImage.TokenImage, { className:"Token", blockchain: 'bsc', address: '0xEeeeeEeeeEeEeeEeEeEeeEEEeeeeEeeeeeeeEEeE' })
                   )
                 </script>
               </div>
@@ -153,7 +290,7 @@
           <div class="px-0 py-4 rounded-lg bg-white border">
             <div class="col px-0">
               <div class="overflow-auto">
-                <h5 class="px-4">Token: Native Polygon</h5>
+                <h5 class="px-4 pb-4">Token: Native Polygon</h5>
                 <div class="px-4">
                   <div id="tokenSix" class="container d-flex justify-content-center token-image pt-2"></div>
                 </div>
@@ -163,7 +300,29 @@
                   ReactDOM.createRoot(
                     document.getElementById('tokenSix')
                   ).render(
-                    React.createElement(window.ReactTokenImage.TokenImage, { blockchain: 'polygon', address: '0xEeeeeEeeeEeEeeEeEeEeeEEEeeeeEeeeeeeeEEeE' })
+                    React.createElement(window.ReactTokenImage.TokenImage, { className:"Token", blockchain: 'polygon', address: '0xEeeeeEeeeEeEeeEeEeEeeEEEeeeeEeeeeeeeEEeE' })
+                  )
+                </script>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="d-block d-md-inline-block p-2 col-12 col-md-4">
+          <div class="px-0 py-4 rounded-lg bg-white border">
+            <div class="col px-0">
+              <div class="overflow-auto">
+                <h5 class="px-4 pb-4">Token: Native SOL</h5>
+                <div class="px-4">
+                  <div id="tokenSeven" class="container d-flex justify-content-center token-image pt-2"></div>
+                </div>
+              </div>
+              <div class="px-4 pt-3">
+                <script>
+                  ReactDOM.createRoot(
+                    document.getElementById('tokenSeven')
+                  ).render(
+                    React.createElement(window.ReactTokenImage.TokenImage, { className:"Token", blockchain: 'solana', address: '11111111111111111111111111111111' })
                   )
                 </script>
               </div>
