--- a/dev.html
+++ b/dev.html
@@ -30,6 +30,8 @@
       .Token {
         width:  200px;
         height:  200px;
+        border-radius:  999px;
+        box-shadow:  0 0 2px black;
       }
     </style>
   </head>
