--- a/dev.html
+++ b/dev.html
@@ -204,6 +204,28 @@
           <div class="px-0 py-4 rounded-lg bg-white border">
             <div class="col px-0">
               <div class="overflow-auto">
+                <h5 class="px-4 pb-4">Velas Token from Wagyu</h5>
+                <div class="px-4">
+                  <div id="velasTokenFromWagyu" class="container d-flex justify-content-center token-image pt-2"></div>
+                </div>
+              </div>
+              <div class="px-4 pt-3">
+                <script>
+                  ReactDOM.createRoot(
+                    document.getElementById('velasTokenFromWagyu')
+                  ).render(
+                    React.createElement(window.ReactTokenImage.TokenImage, { className:"Token", blockchain: 'velas', address: '0xc111c29a988ae0c0087d97b33c6e6766808a3bd3' }),
+                  )
+                </script>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="d-block d-md-inline-block p-2 col-12 col-md-4">
+          <div class="px-0 py-4 rounded-lg bg-white border">
+            <div class="col px-0">
+              <div class="overflow-auto">
                 <h5 class="px-4 pb-4">Solana Token from DePay API</h5>
                 <div class="px-4">
                   <div id="solanaTokenFromDepayApi" class="container d-flex justify-content-center token-image pt-2"></div>
@@ -325,6 +347,28 @@
                     document.getElementById('tokenSeven')
                   ).render(
                     React.createElement(window.ReactTokenImage.TokenImage, { className:"Token", blockchain: 'solana', address: '11111111111111111111111111111111' })
+                  )
+                </script>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="d-block d-md-inline-block p-2 col-12 col-md-4">
+          <div class="px-0 py-4 rounded-lg bg-white border">
+            <div class="col px-0">
+              <div class="overflow-auto">
+                <h5 class="px-4 pb-4">Token: Native VELAS</h5>
+                <div class="px-4">
+                  <div id="tokenNativeVelas" class="container d-flex justify-content-center token-image pt-2"></div>
+                </div>
+              </div>
+              <div class="px-4 pt-3">
+                <script>
+                  ReactDOM.createRoot(
+                    document.getElementById('tokenNativeVelas')
+                  ).render(
+                    React.createElement(window.ReactTokenImage.TokenImage, { className:"Token", blockchain: 'velas', address: '0xEeeeeEeeeEeEeeEeEeEeeEEEeeeeEeeeeeeeEEeE' })
                   )
                 </script>
               </div>
