--- a/demo.html
+++ b/demo.html
@@ -399,6 +399,72 @@
           </div>
         </div>
 
+        <div class="d-block d-md-inline-block p-2 col-12 col-md-4">
+          <div class="px-0 py-4 rounded-lg bg-white border">
+            <div class="col px-0">
+              <div class="overflow-auto">
+                <h5 class="px-4 pb-4">NFT Example: through JSON meta data</h5>
+                <div class="px-4">
+                  <div id="nftJsonMetaDataAlt2" class="container d-flex justify-content-center token-image pt-2"></div>
+                </div>
+              </div>
+              <div class="px-4 pt-3">
+                <script>
+                  ReactDOM.createRoot(
+                    document.getElementById('nftJsonMetaDataAlt2')
+                  ).render(
+                    React.createElement(window.ReactTokenImage.TokenImage, { className:"Token", blockchain: 'ethereum', address: '0xb18380485f7ba9c23deb729bedd3a3499dbd4449' })
+                  )
+                </script>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="d-block d-md-inline-block p-2 col-12 col-md-4">
+          <div class="px-0 py-4 rounded-lg bg-white border">
+            <div class="col px-0">
+              <div class="overflow-auto">
+                <h5 class="px-4 pb-4">NFT Example: through JSON meta data</h5>
+                <div class="px-4">
+                  <div id="nftJsonMetaDataAlt3" class="container d-flex justify-content-center token-image pt-2"></div>
+                </div>
+              </div>
+              <div class="px-4 pt-3">
+                <script>
+                  ReactDOM.createRoot(
+                    document.getElementById('nftJsonMetaDataAlt3')
+                  ).render(
+                    React.createElement(window.ReactTokenImage.TokenImage, { className:"Token", blockchain: 'ethereum', address: '0x60e4d786628fea6478f785a6d7e704777c86a7c6' })
+                  )
+                </script>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="d-block d-md-inline-block p-2 col-12 col-md-4">
+          <div class="px-0 py-4 rounded-lg bg-white border">
+            <div class="col px-0">
+              <div class="overflow-auto">
+                <h5 class="px-4 pb-4">NFT Example: through JSON meta data</h5>
+                <div class="px-4">
+                  <div id="nftJsonMetaDataAlt4" class="container d-flex justify-content-center token-image pt-2"></div>
+                </div>
+              </div>
+              <div class="px-4 pt-3">
+                <script>
+                  ReactDOM.createRoot(
+                    document.getElementById('nftJsonMetaDataAlt4')
+                  ).render(
+                    React.createElement(window.ReactTokenImage.TokenImage, { className:"Token", blockchain: 'ethereum', address: '0x495f947276749ce646f68ac8c248420045cb7b5e', id: '42745998150656004690816543961586238000273307462307754421658803578179357246440' })
+                  )
+                </script>
+              </div>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
   </body>
