--- a/dev.html
+++ b/dev.html
@@ -407,28 +407,6 @@
               <div class="overflow-auto">
                 <h5 class="px-4 pb-4">NFT Example: through JSON meta data</h5>
                 <div class="px-4">
-                  <div id="nftJsonMetaDataAlt1" class="container d-flex justify-content-center token-image pt-2"></div>
-                </div>
-              </div>
-              <div class="px-4 pt-3">
-                <script>
-                  ReactDOM.createRoot(
-                    document.getElementById('nftJsonMetaDataAlt1')
-                  ).render(
-                    React.createElement(window.ReactTokenImage.TokenImage, { className:"Token", blockchain: 'ethereum', address: '0x29652c2e9d3656434bc8133c69258c8d05290f41' })
-                  )
-                </script>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="d-block d-md-inline-block p-2 col-12 col-md-4">
-          <div class="px-0 py-4 rounded-lg bg-white border">
-            <div class="col px-0">
-              <div class="overflow-auto">
-                <h5 class="px-4 pb-4">NFT Example: through JSON meta data</h5>
-                <div class="px-4">
                   <div id="nftJsonMetaDataAlt2" class="container d-flex justify-content-center token-image pt-2"></div>
                 </div>
               </div>
@@ -445,7 +423,7 @@
           </div>
         </div>
 
-         <div class="d-block d-md-inline-block p-2 col-12 col-md-4">
+        <div class="d-block d-md-inline-block p-2 col-12 col-md-4">
           <div class="px-0 py-4 rounded-lg bg-white border">
             <div class="col px-0">
               <div class="overflow-auto">
@@ -460,6 +438,28 @@
                     document.getElementById('nftJsonMetaDataAlt3')
                   ).render(
                     React.createElement(window.ReactTokenImage.TokenImage, { className:"Token", blockchain: 'ethereum', address: '0x60e4d786628fea6478f785a6d7e704777c86a7c6' })
+                  )
+                </script>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="d-block d-md-inline-block p-2 col-12 col-md-4">
+          <div class="px-0 py-4 rounded-lg bg-white border">
+            <div class="col px-0">
+              <div class="overflow-auto">
+                <h5 class="px-4 pb-4">NFT Example: through JSON meta data</h5>
+                <div class="px-4">
+                  <div id="nftJsonMetaDataAlt4" class="container d-flex justify-content-center token-image pt-2"></div>
+                </div>
+              </div>
+              <div class="px-4 pt-3">
+                <script>
+                  ReactDOM.createRoot(
+                    document.getElementById('nftJsonMetaDataAlt4')
+                  ).render(
+                    React.createElement(window.ReactTokenImage.TokenImage, { className:"Token", blockchain: 'ethereum', address: '0x495f947276749ce646f68ac8c248420045cb7b5e', id: '42745998150656004690816543961586238000273307462307754421658803578179357246440' })
                   )
                 </script>
               </div>
