--- a/dev.html
+++ b/dev.html
@@ -11,6 +11,7 @@
     <script crossorigin src="https://unpkg.com/@depay/solana-web3.js@1"></script>
     <script crossorigin src="https://unpkg.com/@depay/web3-blockchains@8"></script>
     <script crossorigin src="https://unpkg.com/@depay/web3-client@10"></script>
+    <script crossorigin src="https://unpkg.com/@depay/web3-tokens@9"></script>
     <script src="tmp/index.dev.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/bootstrap@5/dist/css/bootstrap.css">
     <style>
@@ -184,6 +185,28 @@
           <div class="px-0 py-4 rounded-lg bg-white border">
             <div class="col px-0">
               <div class="overflow-auto">
+                <h5 class="px-4 pb-4">Solana Token from Metaplex</h5>
+                <div class="px-4">
+                  <div id="solanaTokenFromMetaplex" class="container d-flex justify-content-center token-image pt-2"></div>
+                </div>
+              </div>
+              <div class="px-4 pt-3">
+                <script>
+                  ReactDOM.createRoot(
+                    document.getElementById('solanaTokenFromMetaplex')
+                  ).render(
+                    React.createElement(window.ReactTokenImage.TokenImage, { className:"Token", blockchain: 'solana', address: 'DePay1miDBPWXs6PVQrdC5Vch2jemgEPaiyXLNLLa2NF' }),
+                  )
+                </script>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="d-block d-md-inline-block p-2 col-12 col-md-4">
+          <div class="px-0 py-4 rounded-lg bg-white border">
+            <div class="col px-0">
+              <div class="overflow-auto">
                 <h5 class="px-4 pb-4">Solana Token from Trustwallet</h5>
                 <div class="px-4">
                   <div id="solanaTokenFromTrustwallet" class="container d-flex justify-content-center token-image pt-2"></div>
@@ -195,6 +218,28 @@
                     document.getElementById('solanaTokenFromTrustwallet')
                   ).render(
                     React.createElement(window.ReactTokenImage.TokenImage, { className:"Token", blockchain: 'solana', address: 'EPjFWdd5AufqSSqeM2qN1xzybapC8G4wEGGkZwyTDt1v' }),
+                  )
+                </script>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="d-block d-md-inline-block p-2 col-12 col-md-4">
+          <div class="px-0 py-4 rounded-lg bg-white border">
+            <div class="col px-0">
+              <div class="overflow-auto">
+                <h5 class="px-4 pb-4">Solana Token from DePay API</h5>
+                <div class="px-4">
+                  <div id="solanaTokenFromDepayApi" class="container d-flex justify-content-center token-image pt-2"></div>
+                </div>
+              </div>
+              <div class="px-4 pt-3">
+                <script>
+                  ReactDOM.createRoot(
+                    document.getElementById('solanaTokenFromDepayApi')
+                  ).render(
+                    React.createElement(window.ReactTokenImage.TokenImage, { className:"Token", blockchain: 'solana', address: 'epjfwdd5aufqssqem2qn1xzybapc8g4weggkzwytdt1v' })
                   )
                 </script>
               </div>
@@ -239,28 +284,6 @@
                     document.getElementById('velasTokenFromWagyu')
                   ).render(
                     React.createElement(window.ReactTokenImage.TokenImage, { className:"Token", blockchain: 'velas', address: '0xabf26902fd7b624e0db40d31171ea9dddf078351' }),
-                  )
-                </script>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="d-block d-md-inline-block p-2 col-12 col-md-4">
-          <div class="px-0 py-4 rounded-lg bg-white border">
-            <div class="col px-0">
-              <div class="overflow-auto">
-                <h5 class="px-4 pb-4">Solana Token from DePay API</h5>
-                <div class="px-4">
-                  <div id="solanaTokenFromDepayApi" class="container d-flex justify-content-center token-image pt-2"></div>
-                </div>
-              </div>
-              <div class="px-4 pt-3">
-                <script>
-                  ReactDOM.createRoot(
-                    document.getElementById('solanaTokenFromDepayApi')
-                  ).render(
-                    React.createElement(window.ReactTokenImage.TokenImage, { className:"Token", blockchain: 'solana', address: 'epjfwdd5aufqssqem2qn1xzybapc8g4weggkzwytdt1v' })
                   )
                 </script>
               </div>
