--- a/demo.html
+++ b/demo.html
@@ -8,10 +8,10 @@
     <script src="https://cdn.ethers.io/lib/ethers-5.7.umd.min.js" type="application/javascript"></script>
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script crossorigin src="https://unpkg.com/@depay/web3-blockchains@6"></script>
     <script crossorigin src="https://unpkg.com/@depay/solana-web3.js@1"></script>
-    <script crossorigin src="https://unpkg.com/@depay/web3-constants@6"></script>
+    <script crossorigin src="https://unpkg.com/@depay/web3-blockchains@8"></script>
     <script crossorigin src="https://unpkg.com/@depay/web3-client@10"></script>
+    <script crossorigin src="https://unpkg.com/@depay/web3-tokens@9"></script>
     <script src="/dist/umd/index.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/bootstrap@5/dist/css/bootstrap.css">
     <style>
@@ -183,6 +183,28 @@
           <div class="px-0 py-4 rounded-lg bg-white border">
             <div class="col px-0">
               <div class="overflow-auto">
+                <h5 class="px-4 pb-4">Solana Token from Metaplex</h5>
+                <div class="px-4">
+                  <div id="solanaTokenFromMetaplex" class="container d-flex justify-content-center token-image pt-2"></div>
+                </div>
+              </div>
+              <div class="px-4 pt-3">
+                <script>
+                  ReactDOM.createRoot(
+                    document.getElementById('solanaTokenFromMetaplex')
+                  ).render(
+                    React.createElement(window.ReactTokenImage.TokenImage, { className:"Token", blockchain: 'solana', address: 'DePay1miDBPWXs6PVQrdC5Vch2jemgEPaiyXLNLLa2NF' }),
+                  )
+                </script>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="d-block d-md-inline-block p-2 col-12 col-md-4">
+          <div class="px-0 py-4 rounded-lg bg-white border">
+            <div class="col px-0">
+              <div class="overflow-auto">
                 <h5 class="px-4 pb-4">Solana Token from Trustwallet</h5>
                 <div class="px-4">
                   <div id="solanaTokenFromTrustwallet" class="container d-flex justify-content-center token-image pt-2"></div>
@@ -205,28 +227,6 @@
           <div class="px-0 py-4 rounded-lg bg-white border">
             <div class="col px-0">
               <div class="overflow-auto">
-                <h5 class="px-4 pb-4">Velas Token from Wagyu</h5>
-                <div class="px-4">
-                  <div id="velasTokenFromWagyu" class="container d-flex justify-content-center token-image pt-2"></div>
-                </div>
-              </div>
-              <div class="px-4 pt-3">
-                <script>
-                  ReactDOM.createRoot(
-                    document.getElementById('velasTokenFromWagyu')
-                  ).render(
-                    React.createElement(window.ReactTokenImage.TokenImage, { className:"Token", blockchain: 'velas', address: '0xabf26902fd7b624e0db40d31171ea9dddf078351' }),
-                  )
-                </script>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="d-block d-md-inline-block p-2 col-12 col-md-4">
-          <div class="px-0 py-4 rounded-lg bg-white border">
-            <div class="col px-0">
-              <div class="overflow-auto">
                 <h5 class="px-4 pb-4">Solana Token from DePay API</h5>
                 <div class="px-4">
                   <div id="solanaTokenFromDepayApi" class="container d-flex justify-content-center token-image pt-2"></div>
@@ -238,6 +238,50 @@
                     document.getElementById('solanaTokenFromDepayApi')
                   ).render(
                     React.createElement(window.ReactTokenImage.TokenImage, { className:"Token", blockchain: 'solana', address: 'epjfwdd5aufqssqem2qn1xzybapc8g4weggkzwytdt1v' })
+                  )
+                </script>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="d-block d-md-inline-block p-2 col-12 col-md-4">
+          <div class="px-0 py-4 rounded-lg bg-white border">
+            <div class="col px-0">
+              <div class="overflow-auto">
+                <h5 class="px-4 pb-4">Fantom Token</h5>
+                <div class="px-4">
+                  <div id="fantomToken" class="container d-flex justify-content-center token-image pt-2"></div>
+                </div>
+              </div>
+              <div class="px-4 pt-3">
+                <script>
+                  ReactDOM.createRoot(
+                    document.getElementById('fantomToken')
+                  ).render(
+                    React.createElement(window.ReactTokenImage.TokenImage, { className:"Token", blockchain: 'fantom', address: '0x04068DA6C83AFCFA0e13ba15A6696662335D5B75' }),
+                  )
+                </script>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="d-block d-md-inline-block p-2 col-12 col-md-4">
+          <div class="px-0 py-4 rounded-lg bg-white border">
+            <div class="col px-0">
+              <div class="overflow-auto">
+                <h5 class="px-4 pb-4">Velas Token from Wagyu</h5>
+                <div class="px-4">
+                  <div id="velasTokenFromWagyu" class="container d-flex justify-content-center token-image pt-2"></div>
+                </div>
+              </div>
+              <div class="px-4 pt-3">
+                <script>
+                  ReactDOM.createRoot(
+                    document.getElementById('velasTokenFromWagyu')
+                  ).render(
+                    React.createElement(window.ReactTokenImage.TokenImage, { className:"Token", blockchain: 'velas', address: '0xabf26902fd7b624e0db40d31171ea9dddf078351' }),
                   )
                 </script>
               </div>
@@ -370,6 +414,28 @@
                     document.getElementById('tokenNativeVelas')
                   ).render(
                     React.createElement(window.ReactTokenImage.TokenImage, { className:"Token", blockchain: 'velas', address: '0xEeeeeEeeeEeEeeEeEeEeeEEEeeeeEeeeeeeeEEeE' })
+                  )
+                </script>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="d-block d-md-inline-block p-2 col-12 col-md-4">
+          <div class="px-0 py-4 rounded-lg bg-white border">
+            <div class="col px-0">
+              <div class="overflow-auto">
+                <h5 class="px-4 pb-4">Token: Native FANTOM</h5>
+                <div class="px-4">
+                  <div id="tokenNativeFantom" class="container d-flex justify-content-center token-image pt-2"></div>
+                </div>
+              </div>
+              <div class="px-4 pt-3">
+                <script>
+                  ReactDOM.createRoot(
+                    document.getElementById('tokenNativeFantom')
+                  ).render(
+                    React.createElement(window.ReactTokenImage.TokenImage, { className:"Token", blockchain: 'fantom', address: '0xEeeeeEeeeEeEeeEeEeEeeEEEeeeeEeeeeeeeEEeE' })
                   )
                 </script>
               </div>
