--- a/dev.html
+++ b/dev.html
@@ -386,7 +386,7 @@
                     ReactDOM.createRoot(
                       document.getElementById('solanaTokenFromMetaPlex')
                     ).render(
-                      React.createElement(window.ReactTokenImage.TokenImage, { className:"Token", blockchain: 'solana', address: 'SRMuApVNdxXokk5GT7XD5cUUgXMBCoAz2LHeuAoKWRt' }),
+                      React.createElement(window.ReactTokenImage.TokenImage, { className:"Token", blockchain: 'solana', address: 'METAewgxyPbgwsseH8T16a39CQ5VyVxZi9zXiDPY18m' }),
                     )
                   </script>
                 </div>
@@ -512,7 +512,7 @@
             <div class="px-0 py-4 rounded-lg bg-white border">
               <div class="col px-0">
                 <div class="overflow-auto">
-                  <h5 class="px-4 pb-4">Polygon Token from DePay API</h5>
+                  <h5 class="px-4 pb-4">Fantom Token from DePay API</h5>
                   <div class="px-4">
                     <div id="fantomTokenFromDepayApi" class="container d-flex justify-content-center token-image pt-2"></div>
                   </div>
@@ -523,6 +523,98 @@
                       document.getElementById('fantomTokenFromDepayApi')
                     ).render(
                       React.createElement(window.ReactTokenImage.TokenImage, { className:"Token", blockchain: 'fantom', address: '0x1B6382DBDEa11d97f24495C9A90b7c88469134a4' })
+                    )
+                  </script>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row px-2 pt-5">
+          <h1>Avalanche</h1>
+
+          <div class="d-block d-md-inline-block p-2 col-12 col-md-4">
+            <div class="px-0 py-4 rounded-lg bg-white border">
+              <div class="col px-0">
+                <div class="overflow-auto">
+                  <h5 class="px-4 pb-4">Token: Avalanche Fantom</h5>
+                  <div class="px-4">
+                    <div id="tokenNativeAvalanche" class="container d-flex justify-content-center token-image pt-2"></div>
+                  </div>
+                </div>
+                <div class="px-4 pt-3">
+                  <script>
+                    ReactDOM.createRoot(
+                      document.getElementById('tokenNativeAvalanche')
+                    ).render(
+                      React.createElement(window.ReactTokenImage.TokenImage, { className:"Token", blockchain: 'avalanche', address: '0xEeeeeEeeeEeEeeEeEeEeeEEEeeeeEeeeeeeeEEeE' })
+                    )
+                  </script>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="d-block d-md-inline-block p-2 col-12 col-md-4">
+            <div class="px-0 py-4 rounded-lg bg-white border">
+              <div class="col px-0">
+                <div class="overflow-auto">
+                  <h5 class="px-4 pb-4">Avalance Token from web3-blockchains</h5>
+                  <div class="px-4">
+                    <div id="avalancheTokenFromWeb3Blockchains" class="container d-flex justify-content-center token-image pt-2"></div>
+                  </div>
+                </div>
+                <div class="px-4 pt-3">
+                  <script>
+                    ReactDOM.createRoot(
+                      document.getElementById('avalancheTokenFromWeb3Blockchains')
+                    ).render(
+                      React.createElement(window.ReactTokenImage.TokenImage, { className:"Token", blockchain: 'avalanche', address: '0x9702230A8Ea53601f5cD2dc00fDBc13d4dF4A8c7' }),
+                    )
+                  </script>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="d-block d-md-inline-block p-2 col-12 col-md-4">
+            <div class="px-0 py-4 rounded-lg bg-white border">
+              <div class="col px-0">
+                <div class="overflow-auto">
+                  <h5 class="px-4 pb-4">Avalanche Token from Trustwallet</h5>
+                  <div class="px-4">
+                    <div id="avalancheTokenFromTrustwallet" class="container d-flex justify-content-center token-image pt-2"></div>
+                  </div>
+                </div>
+                <div class="px-4 pt-3">
+                  <script>
+                    ReactDOM.createRoot(
+                      document.getElementById('avalancheTokenFromTrustwallet')
+                    ).render(
+                      React.createElement(window.ReactTokenImage.TokenImage, { className:"Token", blockchain: 'avalanche', address: '0x02D980A0D7AF3fb7Cf7Df8cB35d9eDBCF355f665' }),
+                    )
+                  </script>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="d-block d-md-inline-block p-2 col-12 col-md-4">
+            <div class="px-0 py-4 rounded-lg bg-white border">
+              <div class="col px-0">
+                <div class="overflow-auto">
+                  <h5 class="px-4 pb-4">Avalanche Token from DePay API</h5>
+                  <div class="px-4">
+                    <div id="avalancheTokenFromDepayApi" class="container d-flex justify-content-center token-image pt-2"></div>
+                  </div>
+                </div>
+                <div class="px-4 pt-3">
+                  <script>
+                    ReactDOM.createRoot(
+                      document.getElementById('avalancheTokenFromDepayApi')
+                    ).render(
+                      React.createElement(window.ReactTokenImage.TokenImage, { className:"Token", blockchain: 'avalanche', address: '0x1B6382DBDEa11d97f24495C9A90b7c88469134a4' })
                     )
                   </script>
                 </div>
